// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should render bare readonly 1`] = `
<span
  className="tag bare"
>
  technical
</span>
`;

exports[`Tag should render disabled 1`] = `
<span
  className="tag disabled"
  data-disabled="true"
>
  curious programmer
</span>
`;

exports[`Tag should render external 1`] = `
Array [
  " ",
  <a
    className="tag"
    href="https://curiousprogrammer.dev"
    rel="nofollow noopener noreferrer"
    target="_blank"
    title="Curious Programmer"
  >
    curious programmer
  </a>,
  " ",
]
`;

exports[`Tag should render internal 1`] = `
Array [
  " ",
  <a
    className="tag"
    href="/tag/technical"
    title="Technical"
  >
    technical
  </a>,
  " ",
]
`;
